# pyterrier_rag

./: .gitignore  =0.13.0  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_cuda_dev.txt  requirements_dev.txt  ruff.toml  setup.py  trace.ipynb
.claude/: settings.local.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: deploy.yml  style.yml  test.yml
cuda_tests/: __init__.py  test_backend_vllm.py
examples/: aicl_example.ipynb  aicl_nq_example.ipynb  r1searcher.ipynb  run_o1.py  search-o1.ipynb  search-r1.ipynb  trace.ipynb
examples/2WikiMultihopQA/: experiments.ipynb  fid.ipynb  llama.ipynb
examples/nq/: README.md  dense_e5_retrieval_FiD.ipynb  sparse_retrieval_FiD_FlanT5.ipynb  sparse_retrieval_Mistral.ipynb  sparse_retrieval_llama-api.ipynb
extras/: fix_notebooks.sh
pyterrier_rag/: __init__.py  _datasets.py  _fid_readers.py  _frameworks.py  _llmjudge.py  _measures.py  _optional.py  _util.py  aicl.py  experiment.py  measures.py  model.py  outlines.py  provence.py  r1_searcher.py  readers.py  search-r1.py  search_o1.py  search_r1.py  xprovence.py
pyterrier_rag/backend/: __init__.py  _base.py  _hf.py  (+3 more)
tests/: __init__.py  test_aggregation.py  test_aicl.py  test_backend.py  test_backend_hf.py  test_backend_openai.py  test_backend_vllm.py  test_datasets.py  test_fid.py  test_framework.py  test_genetic.py  test_ircot.py  test_judge.py  test_legacy_prompt_api.py  test_measures.py  test_prompt.py  test_prompt_base.py  test_prompt_context_aggregation.py  test_provence.py  test_pyterrier_rag.py  test_reader.py  test_util.py
(+67 files in other folders)
